# sslsockspro

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/src/cpp/: CMakeLists.txt  CMakeLists.txt_todo
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/stunnel-extra/: jnicalls.cpp  ui_unix.c
app/src/main/cpp/stunnel-extra/include/: config.h  ui.h
app/src/main/java/link/infra/sslsockspro/: Constants.java  ProfileDB.java
app/src/main/java/link/infra/sslsockspro/database/: CryptoManager.kt  FileOperation.java  ProfileDB.java  SimpleCrypto.java  StunnelConfig.java  StunnelKeys.java
app/src/main/java/link/infra/sslsockspro/gui/: AdvancedSettingsActivity.java  ExternalProfileImportActivity.java  OpenVPNIntegrationHandler.java  ServiceShortcutActivity.java  ServiceStopActivity.java
app/src/main/java/link/infra/sslsockspro/gui/activities/: AdvancedSettingsActivity.java  ExternalProfileImportActivity.java  MainActivity.java
app/src/main/java/link/infra/sslsockspro/gui/fragments/: AboutExpandableListAdapter.java  AboutFragment.java  AboutItem.java  KeyEditActivity.java  KeyFragment.java  KeyRecyclerViewAdapter.java  LogFragment.java  ProfileEditActivity.java  ProfileFragment.java  ProfileRecyclerViewAdapter.java
app/src/main/java/link/infra/sslsockspro/gui/main/: MainActivity.java
app/src/main/java/link/infra/sslsockspro/gui/mngabout/: AboutExpandableListAdapter.java  AboutFragment.java  AboutItem.java
app/src/main/java/link/infra/sslsockspro/gui/mngkey/: KeyEditActivity.java  KeyFragment.java  KeyRecyclerViewAdapter.java
app/src/main/java/link/infra/sslsockspro/gui/mnglog/: LogFragment.java
app/src/main/java/link/infra/sslsockspro/gui/mngprofile/: ProfileEditActivity.java  ProfileFragment.java  ProfileRecyclerViewAdapter.java
app/src/main/java/link/infra/sslsockspro/service/: BootReceiver.java  ServiceStopReceiver.java  StunnelService.java
app/src/main/res/drawable/: custom_border.xml  ic_copy.xml  ic_export.xml  ic_launcher_background.xml  ic_launcher_background_new.xml  ic_play_arrow_black_24dp.xml  ic_resource_import.xml  ic_shortcut_foreground.xml  ic_sync.xml  ic_tunnel_black_24dp.xml  ic_tunnel_white_24dp.xml
app/src/main/res/layout/: about_group.xml  about_item.xml  activity_advanced_settings.xml  activity_import_from_file.xml  activity_key_edit.xml  activity_main.xml  activity_profile_edit.xml  fragment_about.xml  fragment_key_list.xml  fragment_log.xml  fragment_profile.xml  key_item.xml  profile_item.xml
app/src/main/res/menu/: menu_key_edit.xml  menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  javidnam.xml  no_translation.xml  strings.xml  styles.xml
app/src/main/res/values-fa-rIR/: javidnam.xml  strings.xml
app/src/main/res/xml/: advanced_settings.xml  shortcuts.xml
gradle/wrapper/: gradle-wrapper.properties
